--- a/App.Repository/App.Repository.csproj
+++ b/App.Repository/App.Repository.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\App.EF\App.EF.csproj" />
+    </ItemGroup>
+
 </Project>
