culture support pipeline

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -9,6 +9,13 @@
     "ExpiresInSeconds": 60,
     "RefreshTokenExpiresInSeconds": 604800
   },
+  "DefaultCulture": "en",
+  "SupportedCultures": [
+    "en-US",
+    "et-EE",
+    "ru-EE",
+    "ru"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
