--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -2,13 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ftp;Username=postgres;Password=postgres"
   },
-  "JWTSecurity": {
-    "Key": "ndbas98b9PF[f23m23-0f2-[g23pgm23pg0m23g[2g24g029nmg42pb[90g13ub023b8g302-9gb13883",
-    "Issuer": "taltech.ee",
-    "Audience": "taltech.ee",
-    "ExpiresInSeconds": 60,
-    "RefreshTokenExpiresInSeconds": 604800
-  },
   "DefaultCulture": "en",
   "SupportedCultures": [
     "en-US",
@@ -16,6 +9,9 @@
     "ru-EE",
     "ru"
   ],
+  "Resx":{
+    "ImportTranslationOnStartup": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
