--- a/App.Repository/App.Repository.csproj
+++ b/App.Repository/App.Repository.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\App.EF\App.EF.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ResXResourceReader.NetStandard" Version="1.3.0" />
+      <PackageReference Include="System.Resources.Extensions" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
