--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -9,8 +9,9 @@
     "ru-EE",
     "ru"
   ],
-  "Resx":{
-    "ImportTranslationOnStartup": true
+  "Resx": {
+    "ImportOnStartup": true,
+    "Folder": "../App.Data/Resources"
   },
   "Logging": {
     "LogLevel": {
