--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+        <PackageReference Include="NRedisStack" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
