--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -25,4 +25,8 @@
       <ProjectReference Include="..\App.Service\App.Service.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Admin\" />
+    </ItemGroup>
+
 </Project>
