localization error fix

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -2,13 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ftp;Username=postgres;Password=postgres"
   },
-  "DefaultCulture": "en",
-  "SupportedCultures": [
-    "en-US",
-    "et-EE",
-    "ru",
-    "en"
-  ],
+  "Localization": {
+    "DefaultCulture": "en",
+    "SupportedCultures": [
+      "en-US",
+      "et-EE",
+      "ru",
+      "en"
+    ]
+  },
   "Resx": {
     "ImportOnStartup": true,
     "Folder": "../App.Data/Resources"
