--- a/App.Common/App.Common.csproj
+++ b/App.Common/App.Common.csproj
@@ -6,4 +6,19 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="OtherResource\Testing.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Testing.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="OtherResource\Testing.es-ES.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Testing.es-ES.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="OtherResource\Testing.de-CH.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Testing.de-CH.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
