--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -2,20 +2,23 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ftp;Username=postgres;Password=postgres"
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "User": "",
+    "Password": ""
+  },
   "Localization": {
     "DefaultCulture": "en",
     "SupportedCultures": [
       "en-US",
       "et-EE",
-      "de-CH",
-      "es-ES",
       "ru",
       "en"
     ]
   },
   "Resx": {
-    "ImportOnStartup": true,
-    "Folder": "../App.Data/Resources"
+    "_comment": "REMOVE 'local_resources' string when you run app locally (not in docker)",
+    "LocalResourcesPath": "local_resources"
   },
   "Logging": {
     "LogLevel": {
