--- a/App.Service/App.Service.csproj
+++ b/App.Service/App.Service.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
