caching strategy improvement

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -16,6 +16,11 @@
       "en"
     ]
   },
+  "TranslationCache": {
+    "RedisKeyPrefix": "ui:translations",
+    "DistributedTtl": "06:00:00",
+    "MemoryTtl": "00:10:00"
+  },
   "Resx": {
     "_comment": "REMOVE 'local_resources' string when you run app locally (not in docker)",
     "LocalResourcesPath": "local_resources"
