--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ftp;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   },
   "Redis": {
     "ConnectionString": "localhost:6379",
